After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738177 - The "Add" dialog does not work properly
The "Add" dialog does not work properly
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-08 20:28 UTC by Kat
Modified: 2016-05-08 09:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix the Add button sensitivity (1.50 KB, patch)
2016-05-04 19:02 UTC, David King
none Details | Review

Description Kat 2014-10-08 20:28:41 UTC
After creating a new archive, if the add dialog is opened and some files have been selected and added, the second time that the dialog is openned, the "Add" button is insensitive even though the previous selection has been remembered.

Also, using the "include files", "exclude files" and "exclude folders" does not seem to have any effected on what is added to the archive.
Comment 1 David King 2016-05-04 19:02:31 UTC
Created attachment 327314 [details] [review]
fix the Add button sensitivity

The attached patch fixes the dialog to update the sensitivity of the Add button after the file list has been loaded, which is otherwise not triggered when restoring the list of selected files.
Comment 2 Paolo Bacchilega 2016-05-08 09:30:10 UTC
patch applied to master branch, thank you.